--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>eureka-server-center</module>
         <module>server-provider</module>
         <module>server-consumer</module>
+        <module>server-consumer-ribbon</module>
+        <module>server-consumer-feign</module>
     </modules>
 
 </project>
