--- a/stream-rabbitmq/src/main/resources/application.properties
+++ b/stream-rabbitmq/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=stream-rabbitmq
 server.port=5001
-eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-spring.rabbitmq.virtual-host=boss
+#spring.rabbitmq.virtual-host=boss
+
+spring.cloud.stream.bindings.input.destination=demo.message
+spring.cloud.stream.bindings.output.destination=demo.message
+spring.cloud.stream.bindings.output.contentType=application/json
