push zuul resource code

--- a/server-zuul/src/main/resources/application.properties
+++ b/server-zuul/src/main/resources/application.properties
@@ -4,6 +4,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
 
 zuul.routes.api-v1.path=/api-v1/**
 zuul.routes.api-v1.service-id=server-provider
+#http url:  http://localhost:4001/api-v1/hello
 
 zuul.routes.api-v2.path=/api-v2/**
 zuul.routes.api-v2.service-id=server-provider2
+#http url:  http://localhost:4001/api-v2/hello
