--- a/stream-rabbitmq/src/main/resources/application.yml
+++ b/stream-rabbitmq/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
             consumer:
               exchangeType: direct
               bindingRoutingKey: demoRoutingKey
+              autoBindDlq: true
+              republishToDlq: true
             producer:
               exchangeType: direct
               bindingRoutingKey: demoRoutingKey
