--- a/server-consumer/src/main/resources/application.properties
+++ b/server-consumer/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=server-consumer
 server.port=3001
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+
+spring.zipkin.base-url=http://localhost:6001
+spring.sleuth.sampler.percentage=1
