--- a/server-provider/src/main/resources/application.properties
+++ b/server-provider/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=server-provider
 server.port=2001
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+
+spring.zipkin.base-url=http://localhost:6001
+spring.sleuth.sampler.percentage=1.0
